--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "process.h": "c",
+        "fixed-point.h": "c",
+        "vaddr.h": "c"
     }
 }
