일단 커밋- 깃허브복붙전

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "fixed-point.h": "c",
         "vaddr.h": "c",
         "flags.h": "c",
-        "console.h": "c"
+        "console.h": "c",
+        "synch.h": "c"
     }
 }
